# licenta

./: .gitignore  CMakeLists.txt  Graph.cpp  Graph.h  Map.cpp  Map.h  check  config.yaml  libHelloSlam.cpp  libhello.h  main.cpp  slam_constants.h  structures.h  utils.cpp  utils.h
Tracker/: BundleAdjustment.cpp  BundleAdjustment.h  Tracker.cpp  Tracker.h
cmake_modules/: FindDBoW3.cmake
doc/: Makefile  bibliography.bib  licenta.aux  licenta.blg  licenta.out  licenta.tex  licenta.toc  modi.text
include/: BundleAdjustment.h  Common.h  Feature.h  FeatureFinderMatcher.h  Graph.h  KeyFrame.h  LocalMap.h  LocalMapping.h  Map.h  MapDrawer.h  MapPoint.h  MotionOnlyBA.h  ORBVocabulary.h  ORBextractor.h  OrbMatcher.h  Slam.h  Tracker.h  TumDatasetReader.h  config.h  utils.h
rgbd_dataset_freiburg1_floor/: maping_rgb_depth.txt  maping_rgb_groundtruth.txt
rgbd_dataset_freiburg1_rpy/: estimated.txt  mapping_rgb_depth.txt  mapping_rgb_groundtruth.txt
rgbd_dataset_freiburg1_xyz/: associate.py  estimated.txt  maping_rgb_depth.txt  maping_rgb_groundtruth.txt
src/: BundleAdjustment.cpp  Common.cpp  Feature.cpp  FeatureFinderMatcher.cpp  Graph.cpp  KeyFrame.cpp  LocalMap.cpp  LocalMapping.cpp  Map.cpp  MapDrawer.cpp  MapPoint.cpp  MotionOnlyBA.cpp  ORBextractor.cpp  OrbMatcher.cpp  Slam.cpp  Tracker.cpp  TumDatasetReader.cpp  config.cpp  utils.cpp
